--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
   <body>
     <header>
       <div class="container">
+        <img src="speaker-image.jpg" alt="Marcus Röper" style="border-radius: 50%; width:150px; height:150px;">
         <nav aria-label="Hauptnavigation">
           <ul>
-            <li><a href="#about">Über Marcus</a></li>
-            <li><a href="#services">Leistungen</a></li>
-            <li><a href="#clients">Kunden</a></li>
-            <li><a href="#contact">Kontakt</a></li>
+
           </ul>
         </nav>
       </div>
@@ -22,11 +20,11 @@
     
 <main>
   <section id="hero" class="hero">
-    <div class="hero-content">
+    <div class="container hero-content">
       <h1>Marcus Röper</h1>
       <h2>AI Expert & Strategischer Berater für digitale Transformation im Sozialen Bereich</h2>
-      <p>Erfahren Sie, wie AI und digitale Transformation im sozialen Sektor echten Mehrwert schaffen.</p>
-      <a href="#contact" class="btn">Kontaktieren Sie mich</a>
+      <p>Erfahren Sie, wie modernste AI und digitale Transformation im sozialen Sektor echten Mehrwert schaffen.</p>
+      <a class="btn" href="#contact">Kontaktieren Sie mich</a>
     </div>
   </section>
   
@@ -34,7 +32,8 @@
     <div class="container">
       <h2>Über Marcus Röper</h2>
       <p>
-        Als anerkannter AI-Experte mit langjähriger Erfahrung liegt mein Fokus auf der strategischen Implementierung moderner AI-Lösungen – insbesondere im sozialen Bereich. Ich unterstütze Organisationen dabei, Prozesse effizient zu optimieren und Projekte nachhaltig zu transformieren.
+        Mit langjähriger Erfahrung als anerkannter AI-Experte fokussiere ich mich auf strategische AI-Transformationen, die den sozialen Bereich nachhaltig revolutionieren. 
+        Mein Ansatz vereint moderne Technologien mit praxisnahen Lösungen, um Prozesse zu optimieren und Organisationen zukunftsfähig zu machen.
       </p>
     </div>
   </section>
@@ -51,18 +50,36 @@
     </div>
   </section>
   
-  <section id="clients" class="clients">
+
+  
+  <section id="projects" class="projects">
     <div class="container">
-      <h2>Ehemalige Kunden</h2>
-      <ul>
-        <li>DB</li>
-        <li>Diakonie Rosenheim</li>
-        <li>UdK</li>
-        <li>ASCon</li>
-        <li>FPX</li>
-        <li>Barner 16 (Inklusives Netzwerk Kunststaffender mit und ohne sogenannter Behinderung)</li>
-        <li>MitunsLeben</li>
-      </ul>
+      <h2>Referenzprojekte</h2>
+      <article class="project">
+        <h3><a href="https://www.kaleidofon.ai/" target="_blank">Kaleidofon</a></h3>
+        <p>
+          Barner 16 – ein inklusives Netzwerk von über 100 Kunstschaffenden – konzipiert und gestaltet in kontinuierlicher Zusammenarbeit mit Musiker*innen mit Behinderung eine KI-Anwendung. 
+          Diese Anwendung wird gezielt an behinderungsspezifische Anforderungen angepasst, sodass sie in inklusiven künstlerischen Arbeitsprozessen einen echten Mehrwert bietet.
+        </p>
+      </article>
+      <article class="project">
+        <h3><a href="https://mitpflegeleben.de/" target="_blank">MitPflegeLeben</a></h3>
+        <p>
+          Beratende Tätigkeit für die Umsetzung von AI-Initiativen, die innovative Pflegekonzepte unterstützen und den Weg für digitale Neuerungen im sozialen Bereich ebnen.
+        </p>
+      </article>
+      <article class="project">
+        <h3>Diakonie Rosenheim</h3>
+        <p>
+          Beratung und Entwicklung einer maßgeschneiderten AI-Strategie zur Optimierung interner Prozesse und zur Verbesserung der Kundenbetreuung.
+        </p>
+      </article>
+      <article class="project">
+        <h3><a href="https://it.dbinfrago.com/digitalisierung" target="_blank"></a>Deutsche Bahn</h3>
+        <p>
+          Beratende Begleitung der preisgekrönten AI-Initiative Infrawatch, die innovative Lösungen für betriebliche Herausforderungen implementiert.
+        </p>
+      </article>
     </div>
   </section>
   
@@ -70,9 +87,9 @@
     <div class="container">
       <h2>Digitale & AI Transformation im Sozialen Bereich</h2>
       <p>
-        Digitale Technologien und AI-gestützte Ansätze können den sozialen Sektor nachhaltig verändern. Entdecken Sie, wie moderne Lösungen echte Mehrwerte schaffen.
+        Entdecken Sie, wie innovative Technologien und AI-gestützte Ansätze den sozialen Sektor nachhaltig transformieren können.
       </p>
-      <a href="#contact" class="btn">Lassen Sie uns sprechen</a>
+      <a class="btn" href="#contact">Lassen Sie uns sprechen</a>
     </div>
   </section>
   
@@ -96,14 +113,14 @@
       </form>
       <div class="linkedin-contact">
         <a href="https://www.linkedin.com/in/marcus-roeper/" target="_blank" title="LinkedIn">
-          <img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/linkedin.svg" alt="LinkedIn Icon" />
+          <img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/linkedin.svg" alt="LinkedIn Icon">
         </a>
       </div>
     </div>
   </section>
 </main>
 
-<footer>
+<footer class="footer">
   <div class="container">
     <p>&copy; 2023 Marcus Röper. Alle Rechte vorbehalten.</p>
   </div>
