--- a/index.html
+++ b/index.html
@@ -75,9 +75,15 @@
         </p>
       </article>
       <article class="project">
-        <h3><a href="https://it.dbinfrago.com/digitalisierung" target="_blank"></a>Deutsche Bahn</h3>
+        <h3><a href="https://it.dbinfrago.com/digitalisierung/" target="_blank">Deutsche Bahn</a></h3>
         <p>
           Beratende Begleitung der preisgekrönten AI-Initiative Infrawatch, die innovative Lösungen für betriebliche Herausforderungen implementiert.
+        </p>
+      </article>
+      <article class="project">
+        <h3><a href="https://www.one.org/de/" target="_blank">ONE.org</a></h3>
+        <p>
+          Eintägiger Workshop mit anschließender Implementierung zu Automationspotentialen in der nachhaltigen Kampagnenführung.
         </p>
       </article>
     </div>
